--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(eval_null_mapping_results)
 export(eval_sim_h2)
 export(eval_sim_h2_sommer_strainvar)
 export(eval_sim_h2_with_reps)
-export(make_ccrix_grid)
 export(plot_cc_chromosomes)
+export(plot_ccrix_grid)
 export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
 export(run_parboot)
