Added genome scan function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(plot_cc_chromosomes)
 export(plot_ccrix_grid)
 export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
+export(plot_genome_scan)
 export(run_parboot)
 export(run_subsample)
 export(sim_mpp_data)
