Updating positional CI functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
 export(plot_genome_scan)
 export(run_parboot)
+export(run_parperm)
 export(run_subsample)
 export(sim_mpp_data)
 importFrom(magrittr,"%>%")
