Added QTL positional CI functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(plot_ccrix_grid)
 export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
 export(plot_genome_scan)
+export(run_bayesboot)
 export(run_parboot)
 export(run_parperm)
+export(run_parperm_kinship)
 export(run_subsample)
 export(sim_mpp_data)
 importFrom(magrittr,"%>%")
