added FWER threshold function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(plot_ccrix_grid)
 export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
 export(plot_genome_scan)
+export(pull_fwer_thresh)
 export(run_bayesboot)
 export(run_parboot)
 export(run_parperm)
