--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,5 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: MASS, qtl2, ggplot2, dplyr, magrittr, reshape2
+Imports: MASS, qtl2, ggplot2, dplyr, magrittr, reshape2, evd
 Suggests: miqtl, sommer
