Updated heritability simulations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(eval_mapping_results)
 export(eval_mapping_sampling_results)
 export(eval_null_mapping_results)
 export(eval_sim_h2)
+export(eval_sim_h2_miqtl_strainvar_add_only_fit)
 export(eval_sim_h2_sommer_strainvar)
 export(eval_sim_h2_with_reps)
 export(make_Kasv)
