Updated DESCRIPTION to add psych dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Title: R package for evaluation of genetic analyses in house mouse (Mus musculus
 Version: 0.0.1
 Authors@R: c(person("Gregory", "Keele", email = "gkeele@gmail.com", role = c("aut", "cre")))
 Description: This package contains a number of functions for evaluating genetic analyses (heritability estimation and QTL mapping) in mouse MPPs. It also includes functions to generate cartoon mosaic chromosomes commonly used to represent MPPs.
-Depends: R (>= 3.2.2)
+Depends: R (>= 3.5)
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: MASS, qtl2, ggplot2, dplyr, magrittr, reshape2, evd
+Imports: MASS, qtl2, ggplot2, dplyr, magrittr, reshape2, evd, psych
 Suggests: miqtl, sommer
