--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plot_ccrix_grid)
 export(plot_do_chromosomes)
 export(plot_founder_chromosomes)
 export(plot_genome_scan)
+export(pull_fwer_pval)
 export(pull_fwer_thresh)
 export(run_bayesboot)
 export(run_parboot)
